# ghciwatch-bug-demo

./: CHANGELOG.md  LICENSE  Makefile  README.md  default.nix  flake.nix  ghciwatch-bug-demo.cabal
src/: GhciwatchBugDemo.hs
test/: Main.hs
