cabal-version:      3.0
name:               ghciwatch-bug-demo
version:            0.1.0.0
synopsis:
    A simple haskell package to demonstrate a bug with ghciwatch

license:            MIT
license-file:       LICENSE
author:             Noah Luck Easterly
maintainer:         noaheasterly@mercury.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   src
    exposed-modules:  GhciwatchBugDemo
    build-depends:    base ^>=4.17.2.1

test-suite ghciwatch-bug-demo-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
                    , hspec
                    , ghciwatch-bug-demo
